2002-01-17  olicha  <olivier.chapuis@free.fr>

	* hints/hints_test.c (main): fixed a miss print
	* hints/README: Document -ewmh-desktop

2001-12-30  olicha  <olivier.chapuis@free.fr>

	* hints/README:
	* hints/hints_test.c:
	Added a program which map a window with various hints set or not
	accordingly to some options

2001-04-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* purify/purify.fvwm2rc:
	added DestroyDecor recreate tests

2001-04-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* purify/purify.fvwm2rc:
	added tests for AddToFunc parsing

2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* purify/purify.fvwm2rc:
	more gradient tests

2001-03-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.sh:
	fixed sliding position of top right panel in test 3

2001-03-12  Dan Espen  <dane@mk.telcordia.com>

	* FvwmButtons/FvwmButtons.sh: Add one button test.

2001-03-11  Dan Espen  <dane@mk.telcordia.com>

	* FvwmButtons/FvwmButtons.sh: no double ;; after trap.
	Added positioning test.  Other clean up.
