@@ -1,0 +1,2 @@
+hints_test.o
+hints_test
